--- a/weekend-challenge/web dev: resume portfolio/index.html
+++ b/weekend-challenge/web dev: resume portfolio/index.html
@@ -24,7 +24,7 @@
                         <!--Right clicking the email icon allows you to Copy Email Address-->
                         <img src="https://cdn-icons-png.flaticon.com/128/7887/7887710.png" alt="Email" class="contact-icon">
                     </a>
-                    <span id="email-address">nadia.kane26@gmail</span>
+                    <span id="email-address">nadia.kane26@gmail.com</span>
                 </div>
                 
                 <div class="contact-item">
