Interactive Resume Portfolio [Update with working tooltip format]

--- a/weekend-challenge/web dev: resume portfolio/index.html
+++ b/weekend-challenge/web dev: resume portfolio/index.html
@@ -56,8 +56,9 @@
 
         <div class="header-info-icon"> 
             <h2>Skills</h2>
-            <img src ="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info" class="info-icon" >
-            <span class = "tooltip">Hard skills are measured in <strong>YEARS OF EXPERIENCE </strong>since completing my undergraduate studies</strong></span>
+            <span id="skills">
+                <img src="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info">
+            </span>
         </div>
         
         <div id="skill-container">
@@ -156,9 +157,10 @@
         </div>
         <div class="header-info-icon"> 
             <h2>Hobbies</h2>
-            <img src ="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info" class="info-icon" >
-            <span class = "tooltip">Hover over the icons to watch them move up and down!</span>
-        </div>
+            <span id="hobbies">
+                <img src="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info">
+            </span>
+    </div>
 
     	<div class = "hobbies">
         	<img src="https://cdn-icons-png.flaticon.com/128/10867/10867358.png" alt = "Cycling">
@@ -176,8 +178,9 @@
         <div class="section">
             <div class="header-info-icon"> 
                 <h2>Experience</h2>
-                <img src ="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info" class="info-icon" >
-                <span class = "tooltip">Click the caret for more information about each role.</span>
+                <span id="experience">
+                    <img src="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info">
+                </span>
             </div>
 
             <h3 class="section-title">Imaging Specialist
@@ -268,7 +271,12 @@
         </div>
 
         <div class="section">
+            <div class="header-info-icon"> 
             <h2>Projects</h2>
+            <span id="projects">
+                <img src="https://cdn-icons-png.flaticon.com/128/665/665049.png" alt="Info">
+            </span>
+        </div>
             
             <h3 class="section-title">Thesis: Exploring Deep Neural Network for Image Registration of Whole Mouse Brain Datasets: A Comparative Framework & Challenges with State-of-the-Art Methods   
               <span class="toggle-icon">▲</span>
