--- a/weekend-challenge/weather-forecast-app/index.html
+++ b/weekend-challenge/weather-forecast-app/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <title>Weather Forecast App</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="config.js"></script>
 </head>
 
 <body>
+    <h1> Weather App</h1>
     <div class="container">
-        <h1>Weather Forecast App</h1>
-        <input type="text" id="location" placeholder="Enter location (city or zip code)">
-        <button id="search">Search</button>
-        <div id="weather-info"></div>
+        <div class="search-box">
+            <input type="text" id="location" placeholder="Enter location (city or zip code)">
+            <i class="fas fa-search"></i> <!-- Search icon -->
+        </div>
+        <div id="weather-container">
+            <div id="date-time"></div>
+            <div id="city-name">Saint Paul</div>
+            <div id="weather-cond">Clear: clear sky</div>
+            <img id="weather-icon" src="https://openweathermap.org/img/wn/01n@4x.png" alt="Weather Icon">
+
+            <div id="weather-info">
+                <i class="fas fa-tint" id="humidity">67%</i>
+                <span id="temperature">69˚</span>
+                <i class="fas fa-wind" id="wind-speed">3.44 MPH</i>
+            </div>
+        </div>
+
         <div id="error-message"></div>
     </div>
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
