--- a/weekend-challenge/weather-forecast-app/index.html
+++ b/weekend-challenge/weather-forecast-app/index.html
@@ -18,22 +18,22 @@
             <i class="fas fa-search"></i> <!-- Search icon -->
         </div>
         <div id="weather-container">
-            <div id="date-time"></div>
-            <div id="city-name">Saint Paul</div>
-            <div id="weather-cond">Clear: clear sky</div>
-            <img id="weather-icon" src="https://openweathermap.org/img/wn/01n@4x.png" alt="Weather Icon">
+            <div id="date-time"></div> <!-- Need to consider timezone, work-in-progress -->
+            <div id="city-name"></div>
+            <div id="weather-cond"></div>
+            <img id="weather-icon" src="" alt="Weather Icon">
 
             <div id="weather-info">
                 <div class="weather-item">
                     <img src="https://cdn-icons-png.flaticon.com/128/16350/16350734.png" alt="Humidity Icon">
-                    <p id="humidity">20%</p>
+                    <p id="humidity"></p>
                 </div>
                 <div class="weather-item">
-                    <span id="temperature">69˚</span>
+                    <span id="temperature"></span>
                 </div>
                 <div class="weather-item">
                     <img src="https://cdn-icons-png.flaticon.com/128/959/959711.png" alt="Wind Speed Icon">
-                    <p id="wind-speed">40mph</p>
+                    <p id="wind-speed"></p>
                 </div>
             </div>
 
