--- a/code-challenges/week-3-code-challenge/index.html
+++ b/code-challenges/week-3-code-challenge/index.html
@@ -6,6 +6,7 @@
     <title>Movie Collector</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="config.js"></script>
 </head>
 <body>
 
@@ -13,7 +14,7 @@
         <h1>Movie Collector</h1>
 
         <!-- Movie form -->
-        <form id="movie-form" onsubmit = "saveFormData()">
+        <form id="movie-form">
             <label for="title">Movie Title:</label>
             <input type="text" id="title" name="title" required>
 
@@ -23,7 +24,7 @@
             <label for="year">Year:</label>
             <input type="number" id="year" name="year" required>
 
-            <button id= "search" type="submit">Add Movie</button>
+            <button type="submit">Add Movie</button>
         </form>
 
         <!-- Movie List -->
@@ -32,6 +33,10 @@
 
         <!-- Movie Data from API -->
         <div id="movie-data"></div>
+
+        <!-- Search-->
+        <input type="text" id="search-movie" placeholder="Enter a Movie">
+        <button id="search" type = button>Search</button>
 
     </div>
 
