Moved and renamed checkerboard solution file

--- a/weekend-challenge/weather-forecast-app/index.html
+++ b/weekend-challenge/weather-forecast-app/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="weather-container">
             <div id="date-time"></div> <!-- Need to consider timezone, work-in-progress -->
-            <div id="city-name"></div>
+            <div id="location-name"></div>
             <div id="weather-cond"></div>
             <img id="weather-icon" src="" alt="Weather Icon">
 
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </div>
+        <div id="extended-weather"></div>
         <div id="error-message"></div>
     </div>
     <script src="script.js"></script>
