--- a/weekend-challenge/web dev: resume portfolio/index.html
+++ b/weekend-challenge/web dev: resume portfolio/index.html
@@ -105,6 +105,12 @@
                 </div>
             </div>
             <div class="skill">
+                <span class="skill-label">PostgreSQL</span>
+                <div class="progress-bar">
+                    <div class="progress" style="width: 17%;"></div> 
+                </div>
+            </div>
+            <div class="skill">
                 <span class="skill-label">HPC</span>
                 <div class="progress-bar">
                     <div class="progress" style="width: 17%;"></div> 
